source list WIP

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "experimentalDecorators": true,
     "skipLibCheck": true,
     "target": "es2015",
+    "resolveJsonModule": true,
     "typeRoots": [
       "node_modules/@types"
     ],
