--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.11",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "^8.2.11",
     "@angular/compiler": "^8.2.11",
     "@angular/core": "^8.2.11",
     "@angular/forms": "^8.2.11",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "^8.2.11",
     "@angular/platform-browser-dynamic": "^8.2.11",
     "@angular/router": "^8.2.11",
@@ -24,6 +26,7 @@
     "@tensorflow/tfjs-automl": "^1.0.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "popper": "^1.0.1",
     "rxjs": "6.5.3",
