--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@angular/platform-browser": "^8.2.11",
     "@angular/platform-browser-dynamic": "^8.2.11",
     "@angular/router": "^8.2.11",
-    "@tensorflow-models/coco-ssd": "^2.0.0",
-    "@tensorflow/tfjs": "^1.1.2",
-    "@tensorflow/tfjs-automl": "^1.0.0",
+    "@tensorflow-models/coco-ssd": "2.0.0",
+    "@tensorflow/tfjs": "1.1.2",
+    "@tensorflow/tfjs-automl": "1.0.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
