--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "mapbox-gl": "^0.54.0",
+    "ngx-mapbox-gl": "^4.2.0",
     "popper": "^1.0.1",
     "rxjs": "6.5.3",
     "tslib": "^1.10.0",
