--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tensorflow-models/coco-ssd": "2.0.0",
     "@tensorflow/tfjs": "1.1.2",
     "@tensorflow/tfjs-automl": "1.0.0",
+    "angular-google-charts": "^0.1.6",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
